fixed gap between delete set button and set-ul, now it appears the first few sets added have the menu animation applied to them, moving them up vertically

--- a/frontend/src/styles/exercise.css
+++ b/frontend/src/styles/exercise.css
@@ -3,7 +3,7 @@
 
 .exercise-card-container {
   display: flex;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .exercise-card-header {
