--- a/frontend/src/styles/set.css
+++ b/frontend/src/styles/set.css
@@ -36,5 +36,10 @@
   list-style-type: none;
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  margin: 0;
+  margin-left: 10px;
+  padding: 0;
   gap: 10px;
 }
